# ADSC

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  adsc-specification-v4.md  adsc-specification-v5.md  wp13-edt-derivation.md  wp13-literature.md
.github/workflows/: ci.yml
docs/: concept.md  cost_model.md  digital_twin.md  gnc.md  legal_regulatory.md  limitations.md  one_pager.md  pitch_agencies.md  pitch_deck.md  release_engineering.md  roadmap.md  safety.md  target_selection.md  technical_architecture.md  technical_summary_5p.md  wp9_pil_plan.md
evidence/: adsc_evidence_pack.md  compliance_matrix.csv  compliance_matrix.md
include/adsc/: campaign.hpp  controller.hpp  cost.hpp  decay.hpp  dynamics.hpp  estimator.hpp  flux.hpp  forensic14_states.hpp  fuel_store.hpp  guidance.hpp  mission.hpp  propagation.hpp  relmotion.hpp  tether.hpp  thermal.hpp  twin.hpp
src/: .gitignore.txt  ADSC_Core.cpp  ADSC_Core.cpp.txt  ADSC_Core.h  ADSC_Core.h.txt  LICENSE.txt  README.md.txt  architecture.md.txt  campaign.cpp  controller.cpp  cost.cpp  decay.cpp  dynamics.cpp  estimator.cpp  flux.cpp  fuel_store.cpp  guidance.cpp  main.cpp  main_campaign.cpp  main_cost.cpp  main_decay_trade.cpp  main_flux.cpp  main_kit_trade.cpp  main_ladder.cpp  main_metrics.cpp  main_twin.cpp  mission.cpp  propagation.cpp  relmotion.cpp  tether.cpp  thermal.cpp  twin.cpp
tests/: test_campaign.cpp  test_cost.cpp  test_decay.cpp  test_estimator.cpp  test_flux.cpp  test_forensic14.cpp  test_fuel_store.cpp  test_guidance.cpp  test_ladder.cpp  test_mission.cpp  test_relmotion.cpp  test_sync.cpp  test_tether.cpp  test_twin.cpp  test_wp9_flightlike.cpp
tools/: regenerate_all.sh
tools/compliance/: check_compliance.py  generate_matrix.py  mission_profile.schema.json  test_compliance.py
tools/compliance/examples/: adsc_research_profile.json
tools/compliance/rulepacks/: adsc_policy.json  esa_reference.json  international.json  itu.json  us_faa.json  us_fcc.json  us_noaa.json
tools/docs/: fill_docs_numbers.py  test_docs_numbers.py
tools/evidence/: make_evidence.py  test_evidence.py
tools/forensics/: make_forensics.py  test_forensics.py
tools/prioritization/: make_prioritization.py  test_prioritization.py
tools/readme/: fill_readme_numbers.py  test_readme_numbers.py
tools/viz/: make_viz.py  test_viz.py
validation/: README.md  RESULTS.md  check_cw.py  check_decay.py  check_edt_eta.py  cw_results.csv  decay_part1_integrator_check.csv  decay_part2_atmosphere_check.csv  decay_part2_reference_point.csv  edt_eta_results.csv  requirements.txt
